# gsp-datahub-sidecar

./: .gitignore  README.md  pyproject.toml  sidecar.yaml.example
.claude/: settings.json
.claude/hooks/: pre-push-tests.sh
examples/: bigquery_dbt_dedup.sql  bigquery_procedural.sql  mssql_case_sensitivity.sql  mssql_single_quote_alias.sql  mssql_stored_procedure.sql  oracle_create_view.sql  powerbi_comments.sql
src/gsp_datahub_sidecar/: __init__.py  __main__.py  backend.py  cli.py  config.py  emitter.py  lineage_mapper.py  log_parser.py
tests/: test_authenticated_column_lineage.py  test_backend.py  test_config.py  test_integration.py  test_lineage_mapper.py
