[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsp-datahub-sidecar"
version = "0.1.0"
description = "Recovers BigQuery procedural-SQL lineage that DataHub's sqlglot parser misses, using Gudu SQLFlow."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Gudu Software", email = "info@gudusoft.com"},
]
keywords = ["datahub", "lineage", "bigquery", "sql-parser", "sqlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "acryl-datahub>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
]

[project.scripts]
gsp-datahub-sidecar = "gsp_datahub_sidecar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
